--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ body {
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   z-index: 2;
   margin-right: 20px;
+  width: 100%;
 }
 
 .hero-content-box .greeting {
@@ -141,10 +142,15 @@ body {
 }
 
 .hero-content-box .main-title {
-  font-size: 2.5rem;
-  font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  line-height: 1.2;
+  font-size: clamp(
+    1.8rem,
+    5vw,
+    2.5rem
+  ); /* Se ajusta entre 1.8rem y 2.5rem según el ancho */
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  font-family: "Raleway" sans-serif;
+  line-height: 1.1;
 }
 
 .hero-content-box .quote {
